# msig-launcher

./: Cargo.toml  README.md
.archway/: archway-1.json  constantine-3.json
.github/workflows/: Basic.yml
artifacts/: checksums.txt  msig_launcher.wasm
contracts/msig-launcher/: Cargo.toml
contracts/msig-launcher/.cargo/: config
contracts/msig-launcher/schema/: msig-launcher.json
contracts/msig-launcher/schema/raw/: execute.json  query.json  response_to_m_sig.json
contracts/msig-launcher/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  reply.rs  state.rs
external_wasm/: cw4_group.wasm  cw4_voting.wasm  dao_dao_core.wasm  dao_pre_propose_single.wasm  dao_proposal_single.wasm  dao_voting_cw4.wasm
schema/: msig-launcher.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_code_ids.json  response_to_m_sigs.json
