[package]
name = "msig-launcher"
version = "0.1.0"
authors = ["Guy Garcia <guy.garcia@philabs.xyz>"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
default = ["mainnet"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# Determines which chain code ids are relevant
testing = []
mainnet = []
testnet = []
devnet = []

[package.metadata.scripts]
optimize = """docker run --rm \
  -e CARGO_TERM_COLOR=always \
  -v "$(pwd)":/code \
  -v "$(basename "$(pwd)")_cache":/code/target \
  -v "$(basename "$(pwd)")_registry_cache":/usr/local/cargo/registry \
  -v "$(basename "$(pwd)")_cosmwasm_sccache":/root/.cache/sccache \
  --name "$(basename "$(pwd)")" \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
archway-bindings = "0.2.1"
cosmwasm-schema = "1.3.1"
cosmwasm-std = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror = "1.0.44"
# Dao interfaces
dao-interface = "2.4.2"
dao-voting = "2.4.2"
cw-utils = "1.0.3"
cw4-voting = { version = "0.1.0", features = ["library"] }
cw4 = { version = "0.13.4" }
dao-proposal-single = { version = "2.4.2", features = ["library"] }
dao-pre-propose-base = "2.4.2"

[dev-dependencies]
cw-multi-test = "0.17.0"
dao-pre-propose-single = "2.4.2"
dao-proposal-single = "2.4.2"
cw4-voting = "0.1.0"
cw4-group = "1.1.2"
dao-dao-core = "2.4.2"
