[package]
name = "msig-launcher"
version = "0.1.0"
authors = ["Guy Garcia <guy.garcia@philabs.xyz>"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm \
  -e CARGO_TERM_COLOR=always \
  -v "$(pwd)":/code \
  -v "$(basename "$(pwd)")_cache":/code/target \
  -v "$(basename "$(pwd)")_registry_cache":/usr/local/cargo/registry \
  -v "$(basename "$(pwd)")_cosmwasm_sccache":/root/.cache/sccache \
  --name "$(basename "$(pwd)")" \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
archway-proto = { git = "https://github.com/archway-network/arch3.rs.git", rev = "3551d45", default-features = false, features = ["cosmwasm"] }
archway-bindings = "0.2.1"
cosmwasm-schema = "1.3.1"
cosmwasm-std = { version = "1.3.1", features = ["cosmwasm_1_2"] }
cosmwasm-storage = "1.3.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw-utils = "1.0.3"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror = "1.0.44"
# Dao interfaces
dao-interface = "=2.4.2"
dao-voting = "=2.4.2"
cw4-voting = { version = "=0.1.0", features = ["library"] }
cw4 = { version = "=0.13.4" }
dao-proposal-single = { version = "=2.4.2", features = ["library"] }
dao-pre-propose-base = "=2.4.2"

[dev-dependencies]
archway_test_tube = { git = "https://github.com/archway-network/litmus.git", rev = "903d4e1", features = ["wasm-sudo"] }
